updated index title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link type="text/css" rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="https://sarojkumar007.github.io/static/favicon.io">
 
-        <title>Pig Game</title>
+        <title>Dice Game</title>
     </head>
 
     <body>
